--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -1,3 +1,13 @@
+@import url('./buttons.css');
+@import url('./inputs.css');
+@import url('./modal.css');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
